# xrouter

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  alembic.ini  pyproject.toml
docs/: api-examples.md  api-spec.md  app-description-raggen.md  app-description.md  architecture-raggen.md  openrouter-full.md  sop-release-1-raggen.md  ui-description-4o.md
docs/agent-context/: di.txt  openrouter-full.md  ui-description-4o.md
docs/agent-context/openrouter/: 01-quick-start.txt  02-principles.txt  03-models.txt  04-provider-routing.txt  05-model-routing.txt  06-oauth-pkce.txt  07-api-keys.txt  09-requests.txt  10-responses.txt  11-parameters.txt  12-structured-outputs.txt  13-parameters-api.txt  14-prompt-caching.txt  15-transforms.txt  16-errors.txt  17-limits.txt  18-integrations.txt  19-frameworks.txt  20-uptime.txt
docs/agent-context/provider-api/: gigachat-openapi.yaml  openai-api-spec.txt  yandex-tokenizer.txt  yandexgpt-api-spec.txt
docs/api/: README.md  api-examples.md  api-parameters.md  api-spec.md  auth.md  errors.md  provider-api-spec.md  rate-limits.md  router-api-spec.md
docs/architecture/: README.md  components.md  data-flow.md  dependency-injection.md  deployment.md  monitoring.md  provider-mapping.md  scaling.md  security.md  system-overview.md
docs/development/: ai-assisted-workflow.md  dependencies.md  type-checking.md
docs/openrouter/: 01-quick-start.txt  02-principles.txt  03-models.txt  04-provider-routing.txt  05-model-routing.txt  06-oauth-pkce.txt  08-crypto-api.txt  09-requests.txt  10-responses.txt  11-parameters.txt  12-structured-outputs.txt  13-parameters-api.txt  14-prompt-caching.txt  15-transforms.txt  16-errors.txt  17-limits.txt  18-integrations.txt  19-frameworks.txt  20-uptime.txt
docs/provider-api/: gigachat-openapi.yaml  openai-api-spec.txt  yandexgpt-api-spec.txt
docs/roadmap/: development-roadmap.md  migration-guide.md  mvp-release-plan.md  mvp-roadmap.md  release-plan.md  sop-mvp.md  sop-release-1.0.md  sop-release-1.1.md  sop-release-1.2.md  testing-strategy.md
migrations/: env.py
src/xrouter/core/: cache.py  config.py
src/xrouter/db/: database.py  models.py
src/xrouter/di/: __init__.py  setup.py
src/xrouter/di/containers/: __init__.py  application.py  request.py
src/xrouter/usage/: database_models.py  models.py
