[tool.poetry]
name = "xrouter"
version = "1.0.0"
description = "Russian LLM Router"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "xrouter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# API Framework
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

# Database
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"

# Caching
redis = "^5.2.1"

# Data Validation
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

# HTTP Client
httpx = "^0.25.2"

# Token Management
tiktoken = "^0.5.1"

# Monitoring
prometheus-client = "^0.19.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
# Code Quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"

# Type checking
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=xrouter --cov-report=term-missing"
env = [
    "XROUTER_ENV=test",
    "SQLITE_URL=sqlite:///test.db",
    "REDIS_URL=redis://localhost:6379/1"
]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
follow_imports = "skip"
